Reference burndown chart wiki #1

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -16,7 +16,7 @@
                     } ",
     note = "[Online; accessed 22-July-2024]",
 }
-  @misc{enwiki:1234532469,
+@misc{enwiki:1234532469,
     author = "{Wikipedia contributors}",
     title = "Scripting language --- {Wikipedia}{,} The Free Encyclopedia",
     year = "2024",
@@ -24,4 +24,13 @@
                     https://en.wikipedia.org/w/index.php?title=Scripting_language&oldid=1234532469
                     }",
     note = "[Online; accessed 23-July-2024]",
+}
+@misc{enwiki:1219224248,
+    author = "{Wikipedia contributors}",
+    title = "Burndown chart --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{
+                    https://en.wikipedia.org/w/index.php?title=Burndown_chart&oldid=1219224248
+                    }",
+    note = "[Online; accessed 5-August-2024]",
 }
