--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -57,3 +57,15 @@
            https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf
            ",
 }
+@misc{boogaard2021how,
+    author = {Kat Boogaard},
+    title = {How To Use a Cumulative Flow Diagram -- wrike},
+    howpublished = {\url{
+                    https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+                    }},
+    year = {2021},
+    month = {12},
+    day = {14},
+    note = {[Accessed 08-08-2024]},
+}
+
