Add software rot references #7

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -68,4 +68,28 @@
     day = {14},
     note = {[Accessed 08-08-2024]},
 }
+@misc{harding2024san,
+    author = {Scharon Harding},
+    title = {San Francisco’s Train System Still Uses Floppy Disks—and Will for
+             Years},
+    howpublished = {\url{
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    }},
+    journal = {Ars Technica},
+    year = {2024},
+    month = {04},
+    day = {11},
+    note = {[Accessed 08-08-2024]},
+}
+@misc{warren2020,
+    author = {Tom Warren},
+    title = {Boeing 747s still get critical updates via floppy disks},
+    howpublished = {\url{
+                    https://www.theverge.com/2020/8/11/21363122/boeing-747s-floppy-disc-updates-critical-software
+                    }},
+    year = {2020},
+    month = {08},
+    day = {11},
+    note = {[Accessed 08-08-2024]},
+}
 
