Reference software rot wikipedia page #7

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -34,3 +34,12 @@
                     }",
     note = "[Online; accessed 5-August-2024]",
 }
+@misc{enwiki:1236668404,
+    author = "{Wikipedia contributors}",
+    title = "Software rot --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{
+                    https://en.wikipedia.org/w/index.php?title=Software_rot&oldid=1236668404
+                    }",
+    note = "[Online; accessed 9-August-2024]",
+}
