Add biggest kernel release article reference #7

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -92,4 +92,15 @@
     day = {11},
     note = {[Accessed 08-08-2024]},
 }
+@misc{linuxcom2020why,
+    author = {Linux.com Editorial Staff},
+    title = {Why Linux’s biggest ever kernel release is really no big deal},
+    howpublished = {\url{
+                    https://www.linux.com/news/why-linuxs-biggest-ever-kernel-release-is-really-no-big-deal/
+                    }},
+    year = {2020},
+    month = {08},
+    day = {17},
+    note = {[Accessed 09-08-2024]},
+}
 
