Add summary of the first week's material #8

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -103,4 +103,15 @@
     day = {17},
     note = {[Accessed 09-08-2024]},
 }
+@misc{tef2016write,
+    author = {tef},
+    title = {Write code that is easy to delete, not easy to extend},
+    howpublished = {\url{
+                    https://programmingisterrible.com/post/139222674273/write-code-that-is-easy-to-delete-not-easy-to
+                    }},
+    year = {2016},
+    month = {02},
+    day = {13},
+    note = {[Accessed 13-09-2024]},
+}
 
