Add krysik2023sdlc, femmer2017rapid, and north2007what #12

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -114,4 +114,34 @@
     day = {13},
     note = {[Accessed 13-09-2024]},
 }
-
+@misc{krysik2023sdlc,
+    author = {Arkadiusz Krysik},
+    title = {SDLC Guide: Requirement Analysis in Software Engineering},
+    howpublished = {\url{
+                    https://stratoflow.com/requirements-analysis/
+                    }},
+    year = {2023},
+    month = {11},
+    day = {24},
+    note = {[Accessed 19-09-2024]},
+}
+@article{femmer2017rapid,
+  title={Rapid quality assurance with requirements smells},
+  author={Femmer, Henning and Fern{\'a}ndez, Daniel M{\'e}ndez and Wagner, Stefan and Eder, Sebastian},
+  journal={Journal of Systems and Software},
+  volume={123},
+  pages={190--213},
+  year={2017},
+  publisher={Elsevier}
+}
+@misc{north2007what,
+    author = {Daniel Terhorst-North},
+    title = {What's in a Story?},
+    howpublished = {\url{
+                    https://dannorth.net/whats-in-a-story/
+                    }},
+    year = {2007},
+    month = {2},
+    day = {11},
+    note = {[Accessed 20-09-2024]},
+}
