--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -43,10 +43,17 @@
                     }",
     note = "[Online; accessed 9-August-2024]",
 }
-  @misc{enwiki:1239509091,
-    author = "{Wikipedia contributors}",
-    title = "Kanban --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2024",
-    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Kanban&oldid=1239509091}",
-    note = "[Online; accessed 16-September-2024]"
-  }
+@misc{enwiki:1239509091,
+author = "{Wikipedia contributors}",
+title = "Kanban --- {Wikipedia}{,} The Free Encyclopedia",
+year = "2024",
+howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Kanban&oldid=1239509091}",
+note = "[Online; accessed 16-September-2024]"
+}
+@misc{ enwiki:1245895117,
+author = "{Wikipedia contributors}",
+title = "Non-functional requirement --- {Wikipedia}{,} The Free Encyclopedia",
+year = "2024",
+howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&oldid=1245895117}",
+note = "[Online; accessed 20-September-2024]"
+}
