Add baltes2014sketches #4

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -145,3 +145,11 @@
     day = {11},
     note = {[Accessed 20-09-2024]},
 }
+@inproceedings{baltes2014sketches,
+  title={Sketches and diagrams in practice},
+  author={Baltes, Sebastian and Diehl, Stephan},
+  booktitle={Proceedings of the 22nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+  pages={530--541},
+  year={2014}
+}
+
