Add stroustrup2015object #4

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -152,4 +152,10 @@
   pages={530--541},
   year={2014}
 }
-
+@online{stroustrup2015object,
+        title = {Object Oriented Programming without Inheritance - ECOOP 2015},
+        date = {2015},
+        organization = {Youtube},
+        author = {Bjarne Stroustrup},
+        url = {https://www.youtube.com/watch?v=xcpSLRpOMJM},
+    }
