--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -57,3 +57,10 @@ year = "2024",
 howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&oldid=1245895117}",
 note = "[Online; accessed 20-September-2024]"
 }
+@misc{ enwiki:1230720147,
+    author = "{Wikipedia contributors}",
+    title = "Class diagram --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Class_diagram&oldid=1230720147}",
+    note = "[Online; accessed 28-September-2024]"
+  }
