Finish C4 model overview #15

--- a/lectures/07_c4.md
+++ b/lectures/07_c4.md
@@ -12,18 +12,21 @@ revealjs-url: "../assets/reveal.js-5.1.0/"
 
 # what is the issue with UML?
 
-- closely connected with OOP, propagates object-oriented modelling
-    - however the design and the implementation should be separated
+- closely connected with OOP
+- propagates object-oriented modelling
+    - however the design should not consider the implementation
 
 # C4 model
 
-- hierarchical model
+- hierarchical set of software architecture diagrams
+    - different levels of abstraction for different audience
 - has four levels:
     - context, containers, components and code
-
-- [The C4 model for visualising software architecture](https://c4model.com/)
-    - Context, Containers, Components and Code
-- [The C4 Model for Software Architecture](https://www.infoq.com/articles/C4-architecture-model/)
+- popularized by Simon Brown
+    
+::: {.text-smaller .mt-3}
+this chapter is based on [c4model.com](https://c4model.com/)
+:::
 
 
 # Level 1: System Context diagram
@@ -40,10 +43,17 @@ revealjs-url: "../assets/reveal.js-5.1.0/"
 
 ## system context example
 
-![](figures/borrowed/c4/SystemContext.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemContext.png){height=550}
+
+
+## notation
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemContext-key.png)
 
 
 # Level 2: Container diagram
+
+- 
 
 > Zooms into the software system, and shows the containers (applications, data stores, microservices, etc.) that make up that software system. Technology decisions are also a key part of this diagram.
 >
@@ -51,7 +61,13 @@ revealjs-url: "../assets/reveal.js-5.1.0/"
 
 ## container example
 
-![](figures/borrowed/c4/Containers.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Containers.png){height=550}
+
+
+## notation
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Containers-key.png)
+
 
 # Level 3: Component diagram
 
@@ -62,7 +78,12 @@ revealjs-url: "../assets/reveal.js-5.1.0/"
 
 ## component example
 
-![](figures/borrowed/c4/Components.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Components.png){height=550}
+
+
+## notation
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Components-key.png)
 
 
 # Level 4: Code
@@ -71,6 +92,52 @@ revealjs-url: "../assets/reveal.js-5.1.0/"
 >
 >  Simon Brown - [The C4 Model for Software Architecture](https://www.infoq.com/articles/C4-architecture-model/)
 
-![](https://c4model.com/img/c4-overview.png)
 
-## notation
+## code example
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/MainframeBankingSystemFacade.png){height=500}
+
+
+# additional diagrams in C4 model
+
+- system landscape diagram
+    - even broader environment than the system context diagram
+- dynamic diagram
+    - based on the UML communication and sequence diagrams
+- deployment diagram
+    - based on the UML deployment diagram
+<!--    - audience: technical people inside and outside of the software development team
+        - software architects, developers, infrastructure architects, and operations/support staff-->
+
+
+## system landscape diagram
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemLandscape.png){height=550}
+
+
+## dynamic diagram (collaboration style)
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SignIn.png){height=550}
+
+
+## dynamic diagram (sequence)
+
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/bigbankplc-SignIn-sequence.png){height=550}
+
+
+## deployment diagram
+
+:::::::::::: {.columns}
+::::::::: {.column width="40%" .text-smaller}
+- s where an instance of a software system is running e.g., 
+    - physical infrastructure (e.g. a physical server or device)
+    - virtualised infrastructure,
+    - containerised infrastructure (e.g. a Docker container),
+    - an execution environment (e.g. a database server, Java EE web/application server, Microsoft IIS), etc.
+- deployment nodes can be nested
+
+:::::::::
+::::::::: {.column width="60%"}
+![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/LiveDeployment.png)
+:::::::::
+::::::::::::
