--- a/lectures/07_c4.md
+++ b/lectures/07_c4.md
@@ -141,3 +141,18 @@ this chapter is based on [c4model.com](https://c4model.com/)
 ![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/LiveDeployment.png)
 :::::::::
 ::::::::::::
+
+
+# suggested software
+
+:::::::::::: {.columns}
+::::::::: {.column width="70%"}
+- [Google Drawings](https://docs.google.com/drawings)
+    - it does not have a person shape though, but can be constucted from a circle and a rectange
+
+:::::::::
+::::::::: {.column width="30%"}
+![](figures/c4_drawings_person_shape.png)
+
+:::::::::
+::::::::::::
