Add quote from Ben Shneiderman to summarize C4 #15

--- a/lectures/07_c4.md
+++ b/lectures/07_c4.md
@@ -143,13 +143,20 @@ this chapter is based on [c4model.com](https://c4model.com/)
 ::::::::::::
 
 
+# summary
+
+> overview first, zoom and filter, then details on demand
+>
+> -- Ben Shneiderman
+
+
 # suggested software
 
 :::::::::::: {.columns}
 ::::::::: {.column width="70%"}
 - [Google Drawings](https://docs.google.com/drawings)
     - it does not have a person shape though, but can be constucted from a circle and a rectange
-
+- Visio 
 :::::::::
 ::::::::: {.column width="30%"}
 ![](figures/c4_drawings_person_shape.png)
