--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -159,3 +159,25 @@
         author = {Bjarne Stroustrup},
         url = {https://www.youtube.com/watch?v=xcpSLRpOMJM},
     }
+@book{gamma1994design,
+  title={Design Patterns: Elements of Reusable Object-Oriented Software},
+  author={Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
+  isbn={9780321700698},
+  lccn={94034264},
+  series={Addison-Wesley Professional Computing Series},
+  url={https://books.google.hu/books?id=6oHuKQe3TjQC},
+  year={1994},
+  publisher={Pearson Education}
+}
+
+@misc{stemmler2019how,
+    author = {Khalil Stemmler},
+    title = {How to Learn Software Design and Architecture},
+    howpublished = {\url{
+                    https://khalilstemmler.com/articles/software-design-architecture/full-stack-software-design
+                    }},
+    year = {2019},
+    month = {9},
+    day = {28},
+    note = {[Accessed 02-10-2024]},
+}
