Add GoF design patterns in functional programming slide #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -169,7 +169,6 @@
   year={1994},
   publisher={Pearson Education}
 }
-
 @misc{stemmler2019how,
     author = {Khalil Stemmler},
     title = {How to Learn Software Design and Architecture},
@@ -179,5 +178,27 @@
     year = {2019},
     month = {9},
     day = {28},
+    note = {[Accessed 02-10-2024]},
+}
+@misc{norvig1998design,
+    author = {Peter Norvig},
+    title = {Design Patterns in Dynamic Languages},
+    howpublished = {\url{
+                    http://www.norvig.com/design-patterns/
+                    }},
+    year = {1998},
+    month = {3},
+    day = {17},
+    note = {[Accessed 02-10-2024]},
+}
+@misc{wlaschin2014functional,
+    author = {Scott Wlaschin},
+    title = {Functional Programming Design Patterns},
+    howpublished = {\url{
+                    https://fsharpforfunandprofit.com/fppatterns/
+                    }},
+    year = {2014},
+    month = {12},
+    day = {1},
     note = {[Accessed 02-10-2024]},
 }
