Finish dependency inversion principle slide #16

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -199,6 +199,18 @@
                     }},
     year = {2014},
     month = {12},
-    day = {1},
+    day = {1-5},
     note = {[Accessed 02-10-2024]},
 }
+@misc{millington2019solid,
+    author = {Sam Millington},
+    title = {A Solid Guide to SOLID Principles},
+    howpublished = {\url{
+                    https://www.baeldung.com/solid-principles
+                    }},
+    year = {2019},
+    month = {2},
+    day = {5},
+    note = {[Accessed 04-10-2024]},
+}
+https://www.baeldung.com/solid-principles
