Add references for Liskov substitution principle #16

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -213,4 +213,32 @@
     day = {5},
     note = {[Accessed 04-10-2024]},
 }
-https://www.baeldung.com/solid-principles
+@article{liskov1987data,
+author = {Liskov, Barbara},
+title = {Keynote address - data abstraction and hierarchy},
+year = {1987},
+issue_date = {May 1988},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {23},
+number = {5},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/62139.62141},
+doi = {10.1145/62139.62141},
+journal = {SIGPLAN Not.},
+month = jan,
+pages = {17–34},
+numpages = {18}
+}
+@misc{erinc2020solid,
+    author = {Yiğit Kemal Erinç},
+    title = {The SOLID Principles of Object-Oriented Programming Explained in Plain English},
+    howpublished = {\url{
+                https://www.freecodecamp.org/news/solid-principles-explained-in-plain-english/
+                    }},
+    year = {2020},
+    month = {8},
+    day = {20},
+    note = {[Accessed 02-10-2024]},
+}
+
