--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -64,10 +64,17 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Class_diagram&oldid=1230720147}",
     note = "[Online; accessed 28-September-2024]"
   }
-  @misc{ enwiki:1245630908,
+@misc{ enwiki:1245630908,
     author = "{Wikipedia contributors}",
     title = "Coupling (computer programming) --- {Wikipedia}{,} The Free Encyclopedia",
     year = "2024",
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Coupling_(computer_programming)&oldid=1245630908}",
     note = "[Online; accessed 2-October-2024]"
-  }
+}
+@misc{ enwiki:1165573623,
+    author = "{Wikipedia contributors}",
+    title = "Circle–ellipse problem --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2023",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Circle%E2%80%93ellipse_problem&oldid=1165573623}",
+    note = "[Online; accessed 4-October-2024]"
+}
