Add sources for message bus slides #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -241,4 +241,26 @@ numpages = {18}
     day = {20},
     note = {[Accessed 02-10-2024]},
 }
+@misc{inngest2022message,
+    author = {Inngest Inc.},
+    title = {Message queue vs message bus: the practical differences},
+    howpublished = {\url{
+                    https://www.inngest.com/blog/message-bus-vs-queues
+                    }},
+    year = {2022},
+    month = {6},
+    day = {29},
+    note = {[Accessed 04-10-2024]},
+}
+@misc{okeyo2023beginners,
+    author = {Billy Okeyo},
+    title = {A Beginners Guide to Understanding Message Bus Architecture },
+    howpublished = {\url{
+                    https://dev.to/billy_de_cartel/a-beginners-guide-to-understanding-message-bus-architecture-22ec
+                    }},
+    year = {2023},
+    month = {4},
+    day = {24},
+    note = {[Accessed 04-10-2024]},
+}
 
