Add inversion of control slide #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -254,13 +254,24 @@ numpages = {18}
 }
 @misc{okeyo2023beginners,
     author = {Billy Okeyo},
-    title = {A Beginners Guide to Understanding Message Bus Architecture },
+    title = {A Beginners Guide to Understanding Message Bus Architecture},
     howpublished = {\url{
                     https://dev.to/billy_de_cartel/a-beginners-guide-to-understanding-message-bus-architecture-22ec
                     }},
     year = {2023},
     month = {4},
     day = {24},
+    note = {[Accessed 04-10-2024]},
+}
+@misc{stec2024inversion,
+    author = {Albert Stec},
+    title = {Inversion of Control},
+    howpublished = {\url{
+                    https://www.baeldung.com/cs/ioc
+                    }},
+    year = {2024},
+    month = {2},
+    day = {16},
     note = {[Accessed 04-10-2024]},
 }
 
