Add open closed principle slides with code and diagram #16

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -274,4 +274,25 @@ numpages = {18}
     day = {16},
     note = {[Accessed 04-10-2024]},
 }
-
+@misc{palermo2008onion,
+    author = {Jeffrey Palermo},
+    title = {The Onion Architecture : part 1},
+    howpublished = {\url{
+                    https://jeffreypalermo.com/2008/07/the-onion-architecture-part-1/
+                    }},
+    year = {2008},
+    month = {7},
+    day = {29},
+    note = {[Accessed 04-10-2024]},
+}
+@misc{oloruntoba2024solid,
+    author = {Samuel Oloruntoba and Anish Singh Walia},
+    title = {SOLID: The First 5 Principles of Object Oriented Design},
+    howpublished = {\url{
+                    https://www.digitalocean.com/community/conceptual-articles/s-o-l-i-d-the-first-five-principles-of-object-oriented-design
+                    }},
+    year = {2024},
+    month = {4},
+    day = {23},
+    note = {[Accessed 04-10-2024]},
+}
