Add topology intro slide #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -296,3 +296,14 @@ numpages = {18}
     day = {23},
     note = {[Accessed 04-10-2024]},
 }
+@misc{woltmann2023hexagonal,
+    author = {Sven Woltmann},
+    title = {Hexagonal Architecture},
+    howpublished = {\url{
+                    https://www.happycoders.eu/software-craftsmanship/hexagonal-architecture/
+                    }},
+    year = {2023},
+    month = {1},
+    day = {18},
+    note = {[Accessed 04-10-2024]},
+}
