--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -85,3 +85,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=SOLID&oldid=1237710587}",
     note = "[Online; accessed 4-October-2024]"
 }
+@misc{enwiki:1230588445,
+    author = "{Wikipedia contributors}",
+    title = "Object-oriented analysis and design --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Object-oriented_analysis_and_design&oldid=1230588445}",
+    note = "[Online; accessed 4-October-2024]"
+}
