Add layered slides #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -296,6 +296,17 @@ numpages = {18}
     day = {23},
     note = {[Accessed 04-10-2024]},
 }
+@misc{baeldung20214layered,
+    author = {baeldung},
+    title = {Layered Architecture},
+    howpublished = {\url{
+                    https://www.baeldung.com/cs/layered-architecture
+                    }},
+    year = {2021},
+    month = {11},
+    day = {11},
+    note = {[Accessed 04-10-2024]},
+}
 @misc{woltmann2023hexagonal,
     author = {Sven Woltmann},
     title = {Hexagonal Architecture},
