Add martin2012clean and cockburn2010hexagonal #19

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -318,3 +318,25 @@ numpages = {18}
     day = {18},
     note = {[Accessed 04-10-2024]},
 }
+@misc{cockburn2010hexagonal,
+    author = {Alistair Cockburn},
+    title = {Hexagonal Architecture},
+    howpublished = {\url{
+                   https://alistair.cockburn.us/hexagonal-architecture/
+                    }},
+    year = {2010},
+    month = {2},
+    day = {28},
+    note = {[Accessed 04-10-2024]},
+}
+@misc{martin2012clean,
+    author = {Robert C. Martin},
+    title = {The Clean Architecture},
+    howpublished = {\url{
+                   https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html
+                    }},
+    year = {2012},
+    month = {8},
+    day = {13},
+    note = {[Accessed 05-10-2024]},
+}
