--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -340,3 +340,14 @@ numpages = {18}
     day = {13},
     note = {[Accessed 05-10-2024]},
 }
+@misc{pedamkar2023mvc,
+    author = {Priya Pedamkar},
+    title = {MVC vs MVP vs MVVM},
+    howpublished = {\url{
+                   https://www.educba.com/mvc-vs-mvp-vs-mvvm/
+                    }},
+    year = {2023},
+    month = {4},
+    day = {5},
+    note = {[Accessed 07-10-2024]},
+}
