--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -92,3 +92,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Object-oriented_analysis_and_design&oldid=1230588445}",
     note = "[Online; accessed 4-October-2024]"
 }
+@misc{enwiki:1244967192,
+    author = "{Wikipedia contributors}",
+    title = "Model–view–controller --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Model%E2%80%93view%E2%80%93controller&oldid=1244967192}",
+    note = "[Online; accessed 7-October-2024]"
+}
