--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -351,3 +351,14 @@ numpages = {18}
     day = {5},
     note = {[Accessed 07-10-2024]},
 }
+@misc{asana2024what,
+    author = {Team Asana},
+    title = {What is an implementation plan? 6 steps to create one},
+    howpublished = {\url{
+                   https://asana.com/resources/implementation-plan
+                    }},
+    year = {2024},
+    month = {1},
+    day = {6},
+    note = {[Accessed 07-10-2024]},
+}
