Start interfaces presentation and add Mars Climate Orbiter slide #21

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -362,3 +362,14 @@ numpages = {18}
     day = {6},
     note = {[Accessed 07-10-2024]},
 }
+@misc{dodd2020metric,
+    author = {Tim Dodd},
+    title = {Metric vs Imperial Units: How NASA lost a 327 Million Dollar Mission to Mars},
+    howpublished = {\url{
+                   https://everydayastronaut.com/mars-climate-orbiter/
+                    }},
+    year = {2020},
+    month = {3},
+    day = {14},
+    note = {[Accessed 09-10-2024]},
+}
