--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -99,3 +99,17 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Model%E2%80%93view%E2%80%93controller&oldid=1244967192}",
     note = "[Online; accessed 7-October-2024]"
 }
+@misc{enwiki:1244878409,
+    author = "{Wikipedia contributors}",
+    title = "Interface (computing) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Interface_(computing)&oldid=1244878409}",
+    note = "[Online; accessed 9-October-2024]"
+}
+@misc{enwiki:1248652445,
+    author = "{Wikipedia contributors}",
+    title = "Mars Climate Orbiter --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Mars_Climate_Orbiter&oldid=1248652445}",
+    note = "[Online; accessed 9-October-2024]"
+}
