Add mock definition source #21

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -373,3 +373,14 @@ numpages = {18}
     day = {14},
     note = {[Accessed 09-10-2024]},
 }
+@misc{geeksforgeeks2019mock,
+    author = {GeeksforGeeks},
+    title = {MOCK (Introduction) – Software Engineering},
+    howpublished = {\url{
+                   https://www.geeksforgeeks.org/software-engineering-mock-introduction/
+                    }},
+    year = {2019},
+    month = {4},
+    day = {26},
+    note = {[Accessed 09-10-2024]},
+}
