Add Java example source #21

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -384,3 +384,14 @@ numpages = {18}
     day = {26},
     note = {[Accessed 09-10-2024]},
 }
+@misc{ozler2019java,
+    author = {Hakan Ozler},
+    title = {Java @Deprecated Annotation},
+    howpublished = {\url{
+                   https://www.baeldung.com/java-deprecated
+                    }},
+    year = {2019},
+    month = {1},
+    day = {2},
+    note = {[Accessed 09-10-2024]},
+}
