--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -113,3 +113,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Mars_Climate_Orbiter&oldid=1248652445}",
     note = "[Online; accessed 9-October-2024]"
 }
+@misc{enwiki:1243064642,
+    author = "{Wikipedia contributors}",
+    title = "Planning poker --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Planning_poker&oldid=1243064642}",
+    note = "[Online; accessed 11-October-2024]"
+}
