Add 90-90 rule and risk register pages #18

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -120,3 +120,17 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Planning_poker&oldid=1243064642}",
     note = "[Online; accessed 11-October-2024]"
 }
+@misc{enwiki:1250207830,
+    author = "{Wikipedia contributors}",
+    title = "Ninety–ninety rule --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Ninety%E2%80%93ninety_rule&oldid=1250207830}",
+    note = "[Online; accessed 11-October-2024]"
+}
+@misc{enwiki:1245973868,
+    author = "{Wikipedia contributors}",
+    title = "Risk register --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Risk_register&oldid=1245973868}",
+    note = "[Online; accessed 11-October-2024]"
+}
