--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -395,3 +395,67 @@ numpages = {18}
     day = {2},
     note = {[Accessed 09-10-2024]},
 }
+@misc{paquet2019when,
+    author = {Philippe Paquet},
+    title = {When everyone is responsible, no one is responsible},
+    howpublished = {\url{
+                   https://medium.com/@philippelyp/when-everyone-is-responsible-no-one-is-responsible-73e9a179237f
+                    }},
+    year = {2019},
+    month = {10},
+    day = {7},
+    note = {[Accessed 10-10-2024]},
+}
+@article{brooks1974mythical,
+  title={The mythical man-month},
+  author={Brooks, Frederick P},
+  journal={Datamation},
+  volume={20},
+  number={12},
+  pages={44--52},
+  year={1974}
+}
+@misc{radiganstory,
+    author = {Dan Radigan},
+    title = {Story points and estimation },
+    howpublished = {\url{
+                   https://www.atlassian.com/agile/project-management/estimation
+                    }},
+    note = {[Accessed 11-10-2024]},
+}
+@misc{visualparadigmwhat,
+    author = {VisualParadigm},
+    title = {What is Planning Poker in Agile?},
+    howpublished = {\url{
+                   https://www.visual-paradigm.com/scrum/what-is-agile-planning-poker/
+                    }},
+    note = {[Accessed 11-10-2024]},
+}
+@article{bentley1985programming,
+author = {Bentley, Jon},
+title = {Programmimg pearls},
+year = {1985},
+issue_date = {Sept. 1985},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {9},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/4284.315122},
+doi = {10.1145/4284.315122},
+journal = {Commun. ACM},
+month = sep,
+pages = {896–901},
+numpages = {6}
+}
+@misc{grams2019how,
+    author = {Chris Grams},
+    title = {How much time do developers spend actually writing code?},
+    howpublished = {\url{
+                   https://blog.tidelift.com/how-much-time-do-developers-spend-actually-writing-code
+                    }},
+    year = {2019},
+    month = {10},
+    day = {31},
+    note = {[Accessed 11-10-2024]},
+}
