Add wireframe reference #23

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -459,3 +459,22 @@ numpages = {6}
     day = {31},
     note = {[Accessed 11-10-2024]},
 }
+@misc{bruton2022what,
+    author = {Louise Bruton},
+    title = {What is wireframing? A complete guide},
+    howpublished = {\url{
+                   https://www.uxdesigninstitute.com/blog/what-is-wireframing/
+                    }},
+    year = {2022},
+    month = {9},
+    day = {8},
+    note = {[Accessed 12-10-2024]},
+}
+@misc{figmawhat,
+    author = {Figma},
+    title = {What is wireframing?},
+    howpublished = {\url{
+                   https://www.figma.com/resource-library/what-is-wireframing/
+                    }},
+    note = {[Accessed 12-10-2024]},
+}
