Add slide about prototyping from IxDF #23

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -478,3 +478,14 @@ numpages = {6}
                     }},
     note = {[Accessed 12-10-2024]},
 }
+@misc{ixdf2019what,
+    author = {{Interaction Design Foundation}},
+    title = {What are Prototypes?},
+    howpublished = {\url{
+                   https://www.interaction-design.org/literature/topics/prototypes
+                    }},
+    year = {2019},
+    month = {10},
+    day = {17},
+    note = {[Accessed 12-10-2024]},
+}
