Add clean code references #22

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -489,3 +489,28 @@ numpages = {6}
     day = {17},
     note = {[Accessed 12-10-2024]},
 }
+@inproceedings{sharif2010eye,
+  title={An eye tracking study on camelcase and under\_score identifier styles},
+  author={Sharif, Bonita and Maletic, Jonathan I},
+  booktitle={2010 IEEE 18th International Conference on Program Comprehension},
+  pages={196--205},
+  year={2010},
+  organization={IEEE}
+}
+@book{martin2009clean,
+  title={Clean code: a handbook of agile software craftsmanship},
+  author={Martin, Robert C},
+  year={2009},
+  publisher={Pearson Education}
+}
+@misc{bhargav2024hungarian,
+    author = {Nikhil Bhargav},
+    title = {Hungarian Notation},
+    howpublished = {\url{
+                    https://www.baeldung.com/cs/hungarian-notation
+                    }},
+    year = {2024},
+    month = {3},
+    day = {18},
+    note = {[Accessed 18-10-2024]},
+}
