Add side effect wiki entry #22

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -134,3 +134,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Risk_register&oldid=1245973868}",
     note = "[Online; accessed 11-October-2024]"
 }
+@misc{enwiki:1248751408,
+    author = "{Wikipedia contributors}",
+    title = "Side effect (computer science) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Side_effect_(computer_science)&oldid=1248751408}",
+    note = "[Online; accessed 18-October-2024]"
+}
