--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -141,3 +141,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Side_effect_(computer_science)&oldid=1248751408}",
     note = "[Online; accessed 18-October-2024]"
 }
+@misc{enwiki:1063806709,
+    author = "{Wikipedia contributors}",
+    title = "Side effect (computer science) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2022",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Side_effect_(computer_science)&oldid=1063806709}",
+    note = "[Online; accessed 18-October-2024]"
+}
