Add block examples and goto fail snippet #22

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -514,3 +514,35 @@ numpages = {6}
     day = {18},
     note = {[Accessed 18-10-2024]},
 }
+@misc{migues2014understanding,
+    author = {Sammy Migues},
+    title = {Understanding the Apple ‘goto fail;’ vulnerability},
+    howpublished = {\url{
+                    https://www.blackduck.com/blog/understanding-apple-goto-fail-vulnerability-2.html
+                    }},
+    year = {2014},
+    month = {2},
+    day = {25},
+    note = {[Accessed 19-10-2024]},
+}
+@misc{wheeler2014apple,
+    author = {David A. Wheeler},
+    title = {The Apple goto fail vulnerability: lessons learned},
+    howpublished = {\url{
+                    https://dwheeler.com/essays/apple-goto-fail.html
+                    }},
+    year = {2014},
+    month = {11},
+    day = {23},
+    note = {[Accessed 19-10-2024]},
+}
+@article{dijkstra1968letters,
+  title={Letters to the editor: go to statement considered harmful},
+  author={Dijkstra, Edsger W},
+  journal={Communications of the ACM},
+  volume={11},
+  number={3},
+  pages={147--148},
+  year={1968},
+  publisher={ACM New York, NY, USA}
+}
