Add optional reading about AGC #22

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -546,3 +546,14 @@ numpages = {6}
   year={1968},
   publisher={ACM New York, NY, USA}
 }
+@misc{slavin2015coding,
+    author = {Tim Slavin},
+    title = {Coding the Apollo Guidance Computer (AGC)},
+    howpublished = {\url{
+                   https://kidscodecs.com/coding-the-apollo-guidance-computer-agc/
+                    }},
+    year = {2015},
+    month = {8},
+    day = {3},
+    note = {[Accessed 26-10-2024]},
+}
