Add code quality measures #29

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -557,3 +557,69 @@ numpages = {6}
     day = {3},
     note = {[Accessed 26-10-2024]},
 }
+@misc{fowler2006code,
+    author = {Martin Fowler},
+    title = {Code Smell},
+    howpublished = {\url{
+                   https://martinfowler.com/bliki/CodeSmell.html
+                    }},
+    year = {2006},
+    month = {2},
+    day = {9},
+    note = {[Accessed 27-10-2024]},
+}
+@inproceedings{nagappan2010change,
+  title={Change bursts as defect predictors},
+  author={Nagappan, Nachiappan and Zeller, Andreas and Zimmermann, Thomas and Herzig, Kim and Murphy, Brendan},
+  booktitle={2010 IEEE 21st international symposium on software reliability engineering},
+  pages={309--318},
+  year={2010},
+  organization={IEEE}
+}
+@inproceedings{heitlager2007practical,
+  title={A practical model for measuring maintainability},
+  author={Heitlager, Ilja and Kuipers, Tobias and Visser, Joost},
+  booktitle={6th international conference on the quality of information and communications technology (QUATIC 2007)},
+  pages={30--39},
+  year={2007},
+  organization={IEEE}
+}
+@article{coleman1994using,
+  title={Using metrics to evaluate software system maintainability},
+  author={Coleman, Don and Ash, Dan and Lowther, Bruce and Oman, Paul},
+  journal={Computer},
+  volume={27},
+  number={8},
+  pages={44--49},
+  year={1994},
+  publisher={IEEE}
+}
+@misc{vandeursen2014think,
+    author = {Arie van Deursen},
+    title = {Think Twice Before Using the “Maintainability Index”},
+    howpublished = {\url{
+                   https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/
+                    }},
+    year = {2014},
+    month = {8},
+    day = {29},
+    note = {[Accessed 28-10-2024]},
+}
+@misc{radon,
+    author = {{Radon documentation}},
+    howpublished = {\url{
+                   https://radon.readthedocs.io/en/latest/intro.html
+                    }},
+    note = {[Accessed 28-10-2024]},
+}
+@misc{sharma2024analyzing,
+    author = {Vineet Sharma},
+    title = {Analyzing Software Code — Maintainability Index},
+    howpublished = {\url{
+                   https://mvineetsharma.medium.com/analyzing-software-code-maintainability-index-9765896c80f9
+                    }},
+    year = {2024},
+    month = {2},
+    day = {5},
+    note = {[Accessed 28-10-2024]},
+}
