Add code smell references #29

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -623,3 +623,25 @@ numpages = {6}
     day = {5},
     note = {[Accessed 28-10-2024]},
 }
+@misc{atwood2006code,
+    author = {Jeff Atwood},
+    title = {Code Smells},
+    howpublished = {\url{
+                   https://blog.codinghorror.com/code-smells/
+                    }},
+    year = {2006},
+    month = {5},
+    day = {18},
+    note = {[Accessed 29-10-2024]},
+}
+@misc{venners2003orthogonality,
+    author = {Bill Venners},
+    title = {Orthogonality and the DRY Principle},
+    howpublished = {\url{
+                   https://www.artima.com/articles/orthogonality-and-the-dry-principle
+                    }},
+    year = {2003},
+    month = {3},
+    day = {10},
+    note = {[Accessed 29-10-2024]},
+}
