Add Code Review Guidelines for Humans #32

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -645,3 +645,14 @@ numpages = {6}
     day = {10},
     note = {[Accessed 29-10-2024]},
 }
+@misc{hauer2018code,
+    author = {Philipp Hauer},
+    title = {Code Review Guidelines for Humans},
+    howpublished = {\url{
+                   https://phauer.com/2018/code-review-guidelines/
+                    }},
+    year = {2018},
+    month = {7},
+    day = {31},
+    note = {[Accessed 02-11-2024]},
+}
