Add review types #32

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -656,3 +656,38 @@ numpages = {6}
     day = {31},
     note = {[Accessed 02-11-2024]},
 }
+@misc{wensel2018compassionate,
+    author = {April Wensel},
+    title = {Compassionate (Yet Candid) Code Reviews},
+    howpublished = {\url{
+                   https://www.slideshare.net/slideshow/compassionate-yet-candid-code-reviews/113119451
+                    }},
+    year = {2018},
+    month = {9},
+    day = {6},
+    note = {[Accessed 02-11-2024]},
+}
+@misc{tryqa_walkthrough,
+    author = {{Try QA}},
+    title = {What is Walkthrough in software testing?},
+    howpublished = {\url{
+                   http://tryqa.com/what-is-walkthrough-in-software-testing
+                    }},
+    note = {[Accessed 02-11-2024]},
+}
+@misc{tryqa_technical,
+    author = {{Try QA}},
+    title = {What is Technical review in software testing?},
+    howpublished = {\url{
+                   http://tryqa.com/what-is-technical-review-in-software-testing
+                    }},
+    note = {[Accessed 02-11-2024]},
+}
+@misc{tryqa_inspection,
+    author = {{Try QA}},
+    title = {What is Inspection in software testing?},
+    howpublished = {\url{
+                   http://tryqa.com/what-is-inspection-in-software-testing
+                    }},
+    note = {[Accessed 02-11-2024]},
+}
