--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -148,3 +148,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Side_effect_(computer_science)&oldid=1063806709}",
     note = "[Online; accessed 18-October-2024]"
 }
+@misc{enwiki:1060854286,
+    author = "{Wikipedia contributors}",
+    title = "Software inspection --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2021",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Software_inspection&oldid=1060854286}",
+    note = "[Online; accessed 2-November-2024]"
+}
