Add commit message slide #32

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -691,3 +691,14 @@ numpages = {6}
                     }},
     note = {[Accessed 02-11-2024]},
 }
+@misc{beams2014how,
+    author = {Chris Beams},
+    title = {How to Write a Git Commit Message},
+    howpublished = {\url{
+                   https://cbea.ms/git-commit/
+                    }},
+    year = {2014},
+    month = {8},
+    day = {31},
+    note = {[Accessed 04-11-2024]},
+}
