Add thresholds for review #32

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -702,3 +702,22 @@ numpages = {6}
     day = {31},
     note = {[Accessed 04-11-2024]},
 }
+@book{hund2019pragmatic,
+  title     = "The Pragmatic Programmer: From Journeyman to Master",
+  author    = "Andrew Hunt and David Thomas",
+  publisher = "Addison Wesley",
+  edition   =  2,
+  month     =  dec,
+  year      =  2019,
+  address   = "Boston, MA",
+  language  = "en"
+}
+@misc{smartbear_best,
+    author = {{Smartbear}},
+    title = {Best Practices for Code Review},
+    howpublished = {\url{
+                   https://smartbear.com/learn/code-review/best-practices-for-peer-code-review
+                    }},
+    note = {[Accessed 04-11-2024]},
+}
+
